--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name=".part2.EditActivity"></activity>
         <service android:name=".part3.Part3Service"></service>
+        <receiver android:name=".part3.Part3Fragment$ResponseReceiver"  android:exported="true">
+        </receiver>
     </application>
 
 </manifest>
